--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form">
-
+            <!-----------------------------------------------------login up form--------------------------------------->
             <div class="login item">
                 <form class="login-form">
                     <span>
@@ -44,8 +44,10 @@
 
                     <div class="checkbox-text">
                         <div class="checkbox-content">
-                            <input type="checkbox" id="logCheck">
-                            <label for="logCheck" class="text">Remember me</label>
+                            <label for="logCheck" class="text">
+                                <input type="checkbox" id="logCheck">
+                                Remember me
+                            </label>
                         </div>
                         <a href="#" class="text">Forgot password?</a>
                     </div>
@@ -53,7 +55,7 @@
                 </form>
                 <div class="lgbtn">
                     <input type="submit" class="btn" value="Login">
-                    <button class="sign-up-btn" onclick="signUpBtn()">Sign up</button>
+                    <button class=" sign-up-btn" onclick="signUpBtn()">Sign up</button>
                 </div>
                 <!-- ------------------------------------------------------------ -->
 
@@ -69,28 +71,8 @@
                         Login with Google
                     </button>
                 </div>
-
-
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <!-----------------------------------------------------sign up form--------------------------------------->
             <div class="sign-up item">
                 <form class="sign-up-form">
                     <span>
